--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
+/* @font-face {
   font-family: 'CustomFont';
   src: url('/src/assets/AppleSDGothicNeo.ttc') format('truetype');
-}
+} */
+ 
 :root {
-  font-family: 'CustomFont',Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
